Update : CH01. 디자인 패턴(p16~p28).md

--- a/면접을 위한 CS 전공지식 노트/디자인 패턴/CH01. 디자인 패턴(p16~p28).md
+++ b/면접을 위한 CS 전공지식 노트/디자인 패턴/CH01. 디자인 패턴(p16~p28).md
@@ -114,7 +114,7 @@ Date: May 6, 2024
 - **팩토리 패턴(Factory Pattern)**이란?
     - 객체 생성 부분을 떼어내 추상화한 패턴이며, 상속 관계에서 상위 클래스가 뼈대를 결정하고, 하위 클래스가 객체 생성에 관한 구체적인 구현 부분을 담당하는 패턴이다.
     - 장점 : 느슨한 결함 → 유연성 확보, 유지보수 수월
-- Java 코드로 SIngleton 구현하기
+- Java 코드로 구현하기
     - Coffe.java
         
         ```java
