Update CH02-02.TCPIP 4계층 모델(p80 ~ p97).md

--- a/면접을 위한 CS 전공지식 노트/네트워크/CH02-02.TCPIP 4계층 모델(p80 ~ p97).md
+++ b/면접을 위한 CS 전공지식 노트/네트워크/CH02-02.TCPIP 4계층 모델(p80 ~ p97).md
@@ -6,7 +6,7 @@ Date: May 19, 2024
 
 ## 계층 구조
 
-![Untitled](CH02-02%20TCP%20IP%204%E1%84%80%E1%85%A8%E1%84%8E%E1%85%B3%E1%86%BC%20%E1%84%86%E1%85%A9%E1%84%83%E1%85%A6%E1%86%AF(p80%20~%20p97)%20902b55faef9643c1adaa7ad3fb59d7e1/Untitled.png)
+![Untitled (6)](https://github.com/hyejoojung719/CS-Study/assets/81564593/3f5d5b64-568e-4a8a-a068-181479c51a53)
 
 - 특정 계층 변경 시 타 계층에 영향 X
 
@@ -44,7 +44,7 @@ Date: May 19, 2024
 
 TCP 연결 확립 과정 → 연결 확립으로 신뢰성 구축 후 데이터 전송 시작(UDP에는 X)
 
-![Untitled](CH02-02%20TCP%20IP%204%E1%84%80%E1%85%A8%E1%84%8E%E1%85%B3%E1%86%BC%20%E1%84%86%E1%85%A9%E1%84%83%E1%85%A6%E1%86%AF(p80%20~%20p97)%20902b55faef9643c1adaa7ad3fb59d7e1/Untitled%201.png)
+![Untitled (7)](https://github.com/hyejoojung719/CS-Study/assets/81564593/09f129c6-b54e-4296-82be-4904e9334f75)
 
 1️⃣ **SYN** : 클라이언트는 서버에 클라이언트의 ISN을 담아 SYN송신
 
@@ -62,7 +62,7 @@ ACK(ACKnowledgement) : 응답 플래그
 
 TCP 연결 해제 과정
 
-![Untitled](CH02-02%20TCP%20IP%204%E1%84%80%E1%85%A8%E1%84%8E%E1%85%B3%E1%86%BC%20%E1%84%86%E1%85%A9%E1%84%83%E1%85%A6%E1%86%AF(p80%20~%20p97)%20902b55faef9643c1adaa7ad3fb59d7e1/Untitled%202.png)
+![Untitled (8)](https://github.com/hyejoojung719/CS-Study/assets/81564593/9b8ad51e-4505-4fcc-8c37-69c1dc74794a)
 
 1️⃣ 클라이언트가 연결을 닫을 때 FIN 설정된 세그먼트를 서버에 송신 & 클라이언트느 FIN_WAIT_1상태로 들어감
 
@@ -139,7 +139,7 @@ TCP 연결 해제 과정
 
 데이터 링크 계층에서 이더넷 프레임을 통해 전달받은 데이터의 에러 검출, 캡슐화
 
-![Untitled](CH02-02%20TCP%20IP%204%E1%84%80%E1%85%A8%E1%84%8E%E1%85%B3%E1%86%BC%20%E1%84%86%E1%85%A9%E1%84%83%E1%85%A6%E1%86%AF(p80%20~%20p97)%20902b55faef9643c1adaa7ad3fb59d7e1/Untitled%203.png)
+![Untitled (9)](https://github.com/hyejoojung719/CS-Study/assets/81564593/6eda69a7-dee2-4ee9-b73d-45b7878867e3)
 
 - **Preamble** : 이더넷 프레임이 시작
 - **SFD(Start Frame Delimiter)** : 다음 바이트부터 MAC주소 필드가 시작됨
