Update CH02-02.TCPIP 4계층 모델(p80 ~ p97).md

--- a/면접을 위한 CS 전공지식 노트/네트워크/CH02-02.TCPIP 4계층 모델(p80 ~ p97).md
+++ b/면접을 위한 CS 전공지식 노트/네트워크/CH02-02.TCPIP 4계층 모델(p80 ~ p97).md
@@ -64,7 +64,7 @@ TCP 연결 해제 과정
 
 ![Untitled (8)](https://github.com/hyejoojung719/CS-Study/assets/81564593/9b8ad51e-4505-4fcc-8c37-69c1dc74794a)
 
-1️⃣ 클라이언트가 연결을 닫을 때 FIN 설정된 세그먼트를 서버에 송신 & 클라이언트느 FIN_WAIT_1상태로 들어감
+1️⃣ 클라이언트가 연결을 닫을 때 FIN 설정된 세그먼트를 서버에 송신 & 클라이언트는 FIN_WAIT_1상태로 들어감
 
 2️⃣ 서버는 클라이언트로 ACK 설정된 승인 세그먼트 송신 & 서버는 CLOSE_WAIT 상태로 들어감 & 클라이언트가 ACK을 수신하면 FIN_WAIT_2 상태로 들어감.
 
