Update CH02-04.IP 주소(p105~ p113).md

--- a/면접을 위한 CS 전공지식 노트/네트워크/CH02-04.IP 주소(p105~ p113).md
+++ b/면접을 위한 CS 전공지식 노트/네트워크/CH02-04.IP 주소(p105~ p113).md
@@ -41,7 +41,7 @@ Date: May 31, 2024
 - 앞 부분 : 네트워크 주소
 - 뒷 부분 : 호스트 주소(컴퓨터에 부여하는 주소)
     
-    ![Untitled](CH02-04%20IP%20%E1%84%8C%E1%85%AE%E1%84%89%E1%85%A9(p105~%20p113)%20bacf878ce9024d73af70fbae499286ee/Untitled.png)
+    ![Untitled (13)](https://github.com/hyejoojung719/CS-Study/assets/81564593/2faaf0a0-a2c8-42d1-9568-1321e27ee22e)
     
 - 구분 비트(맨 왼쪽 비트)를 통해 클래스 구분 ex) 클래스 A는 0, B는 10, C는 110
 - 네트워크의 첫 번쨰 주소는 네트워크 주소, 가장 마지막 주소는 브로드캐스트 주소로 사용한다. ⇒ 버리는 주소가 많아질 수 있어, 이를 해소하기 위해 DHCP, NAT, IPv6등장
