--- a/면접을 위한 CS 전공지식 노트/네트워크/CH02-05.HTTP(p114~ p131).md
+++ b/면접을 위한 CS 전공지식 노트/네트워크/CH02-05.HTTP(p114~ p131).md
@@ -10,7 +10,7 @@ Date: May 31, 2024
     - **RTT** : 패킷 왕복 시간
 - 서버로부터 파일을 가져올 때마다 TCP 3-way handshake를 계속 열어야 하기 때문에 RTT 증가
     
-    ![Untitled](CH02-05%20HTTP(p114~%20p131)%205ff0e5767ed1429292ec736575baa7bc/Untitled.png)
+    ![Untitled (14)](https://github.com/hyejoojung719/CS-Study/assets/81564593/1c426de9-64ac-4274-bd14-c1c08237cdbd)
     
 
 ### RTT 증가 해결 방법
